# openGl-test

./: .gitignore  CMakeLists.txt  README.md
src/: glText.cpp  test1.cpp
